--- a/starter-page.html
+++ b/starter-page.html
@@ -1,1 +1,235 @@
-Within the intricate world of electronics, DiodeDynex stands as the silent sentinel, directing and controlling the flow of electric current with precision. From the bright glow of LEDs to the steady reliability of standard diodes and the voltage-regulating prowess of zener diodes, these tiny components are the unsung heroes of countless devices. Whether converting AC to DC or safeguarding circuits from surges, DiodeDynex ensures that electricity moves exactly where it needs to go, illuminating paths and powering innovation. In every circuit, these diodes are essential, bridging the gap between concept and functionality, guiding the pulse of modern electronics with unmatched expertise.
+======================================================= -->
+    <div class="preloader">
+        <div class="lds-ripple">
+            <div class="lds-pos"></div>
+            <div class="lds-pos"></div>
+        </div>
+    </div>
+    <!-- ============================================================== -->
+    <!-- Main wrapper - style you can find in pages.scss -->
+    <!-- ============================================================== -->
+    <div id="main-wrapper" data-theme="light" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
+        data-sidebar-position="fixed" data-header-position="fixed" data-boxed-layout="full">
+        <!-- ============================================================== -->
+        <!-- Topbar header - style you can find in pages.scss -->
+        <!-- ============================================================== -->
+        <header class="topbar" data-navbarbg="skin6">
+            <nav class="navbar top-navbar navbar-expand-md">
+                <div class="navbar-header" data-logobg="skin6">
+                    <!-- This is for the sidebar toggle which is visible on mobile only -->
+                    <a class="nav-toggler waves-effect waves-light d-block d-md-none" href="javascript:void(0)"><i
+                            class="ti-menu ti-close"></i></a>
+                    <!-- ============================================================== -->
+                    <!-- Logo -->
+                    <!-- ============================================================== -->
+                    <div class="navbar-brand">
+                        <!-- Logo icon -->
+                        <a href="index.php">
+                            <b class="logo-icon d-flex">
+                                <!-- Dark Logo icon -->
+                                 <img src="../assets/images/logo.png" alt="homepage"  height="60"/> 
+                                <!-- Light Logo icon -->
+                               <h2 style="font-size:3rem;font-weight:800;" class="mt-1 mx-1">Admin</h2>
+                            </b>
+                            <!--End Logo icon -->
+                            <!-- Logo text -->
+                            
+                        </a>
+                    </div>
+                    <!-- ============================================================== -->
+                    <!-- End Logo -->
+                    <!-- ============================================================== -->
+                    <!-- ============================================================== -->
+                    <!-- Toggle which is visible on mobile only -->
+                    <!-- ============================================================== -->
+                    <a class="topbartoggler d-block d-md-none waves-effect waves-light" href="javascript:void(0)"
+                        data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i
+                            class="ti-more"></i></a>
+                </div>
+                <!-- ============================================================== -->
+                <!-- End Logo -->
+                <!-- ============================================================== -->
+                <div class="navbar-collapse collapse" id="navbarSupportedContent">
+                    <!-- ============================================================== -->
+                    <!-- toggle and nav items -->
+                    <!-- ============================================================== -->
+                    <ul class="navbar-nav float-left mr-auto ml-3 pl-1">
+                        <!-- Notification -->
+                        <li class="nav-item dropdown">
+
+                        </li>
+                        <!-- End Notification -->
+                        <!-- ============================================================== -->
+                        <!-- create new -->
+                        <!-- ============================================================== -->
+                        <li class="nav-item dropdown">
+
+                            <h2 class="mt-2">SRS ELECTRICAL LAB</h2>
+                        </li>
+                    </ul>
+                    <!-- ============================================================== -->
+                    <!-- Right side toggle and nav items -->
+                    <!-- ============================================================== -->
+                    <ul class="navbar-nav float-right">
+                        <!-- ============================================================== -->
+                        <!-- Search -->
+                        <!-- ============================================================== -->
+                        <li class="nav-item d-none d-md-block">
+
+                        </li>
+                        <!-- ============================================================== -->
+                        <!-- User profile and search -->
+                        <!-- ============================================================== -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                <img src="../../../images/admin/<?php echo $_SESSION['image'] ?>" alt="user" class="rounded-circle"
+                                    width="50" height="50">
+
+                                <span class="ml-2 d-none d-lg-inline-block"><span>Hello,</span> <span
+                                        class="text-dark"><?php echo $_SESSION['name'] ?></span> <i data-feather="chevron-down"
+                                        class="svg-icon"></i></span>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
+                                <a class="dropdown-item" href="javascript:void(0)"><i data-feather="user"
+                                        class="svg-icon mr-2 ml-1"></i>
+                                    <?php echo $_SESSION['email'] ?></a>
+                                <!--<a class="dropdown-item" href="javascript:void(0)"><i data-feather="credit-card"
+                                        class="svg-icon mr-2 ml-1"></i>
+                                    My Bala nce</a>
+                                <a class="dropdown-item" href="javascript:void(0)"><i data-feather="mail"
+                                        class="svg-icon mr-2 ml-1"></i>
+                                    Inbox</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="javascript:void(0)"><i data-feather="settings"
+                                        class="svg-icon mr-2 ml-1"></i>
+                                    Account Setting</a>
+                                <div class="dropdown-divider"></div> -->
+                                <a href="logout.php" class="dropdown-item" href="javascript:void(0)"><i data-feather="power"
+                                        class="svg-icon mr-2 ml-1"></i>
+                                    Logout</a>
+                                <div class="dropdown-divider"></div>
+                                <div class="pl-4 p-3"><a href="profile.php" href="javascript:void(0)" class="btn btn-sm btn-info">View
+                                        Profile</a></div>
+                            </div>
+                        </li>
+                        <!-- ============================================================== -->
+                        <!-- User profile and search -->
+                        <!-- ============================================================== -->
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <!-- ============================================================== -->
+        <!-- End Topbar header -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Left Sidebar - style you can find in sidebar.scss  -->
+        <!-- ============================================================== -->
+        <aside class="left-sidebar" data-sidebarbg="skin6">
+            <!-- Sidebar scroll-->
+            <div class="scroll-sidebar" data-sidebarbg="skin6">
+                <!-- Sidebar navigation-->
+                <nav class="sidebar-nav">
+                    <ul id="sidebarnav">
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="index.php" aria-expanded="false">
+                                <i data-feather="home" class="feather-icon"></i>
+                                <span class="hide-menu">Dashboard</span>
+                            </a>
+                        </li>
+                        <li class="list-divider"></li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="category_details.php" aria-expanded="false">
+                                <i data-feather="grid" class="feather-icon"></i>
+                                <span class="hide-menu">Category</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="tester_res.php" aria-expanded="false">
+                                <i data-feather="user-check" class="feather-icon"></i>
+                                <span class="hide-menu">Tester Login Res</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="cpri_res.php" aria-expanded="false">
+                                <i data-feather="user-check" class="feather-icon"></i>
+                                <span class="hide-menu">CPRI Login Res</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="user_res.php" aria-expanded="false">
+                                <i data-feather="user-check" class="feather-icon"></i>
+                                <span class="hide-menu">User Login Res</span>
+                            </a>
+                        </li>
+
+                        <li class="list-divider"></li>
+                        <li class="nav-small-cap"><span class="hide-menu">User Lists</span></li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="testerlist.php" aria-expanded="false">
+                                <i data-feather="users" class="feather-icon"></i>
+                                <span class="hide-menu">Tester List</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="cpritesterlist.php" aria-expanded="false">
+                                <i data-feather="users" class="feather-icon"></i>
+                                <span class="hide-menu">CPRI Tester List</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="user_list.php" aria-expanded="false">
+                                <i data-feather="users" class="feather-icon"></i>
+                                <span class="hide-menu">User's List</span>
+                            </a>
+                        </li>
+
+                        <li class="list-divider"></li>
+                        <li class="nav-small-cap"><span class="hide-menu">Published List</span></li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="Published_tester.php" aria-expanded="false">
+                                <i data-feather="check-circle" class="feather-icon"></i>
+                                <span class="hide-menu">Published Tester</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item ">
+                            <a class="sidebar-link sidebar-link" href="Published_cpri_tester.php" aria-expanded="false">
+                                <i data-feather="check-circle" class="feather-icon"></i>
+                                <span class="hide-menu">Published CPRI Tester</span>
+                            </a>
+                        </li>
+
+                        <li class="list-divider"></li>
+                        <li class="nav-small-cap"><span class="hide-menu">Tests Lists</span></li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="tester_res_user.php" aria-expanded="false">
+                                <i data-feather="check-circle" class="feather-icon"></i>
+                                <span class="hide-menu">Tester List</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link sidebar-link" href="cpritester_res_user.php" aria-expanded="false">
+                                <i data-feather="check-circle" class="feather-icon"></i>
+                                <span class="hide-menu"> CPRI Tester List</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- End Sidebar navigation -->
+            </div>
+            <!-- End Sidebar scroll-->
+        </aside>
